--- a/sfdx-source/isvte_falcon/main/default/aura/.gitignore
+++ b/sfdx-source/isvte_falcon/main/default/aura/.gitignore
@@ -19,7 +19,9 @@
 # specific feature module within this package directory (ie. into a sibling of
 # main/default)
 ################################################################################
-# TODO: Need to come back and determine which Aura components are core and what goes in features
+# TODO: Need to come back and determine which Aura components are core and what
+#       goes in features.  For now, comment out the rest of this .gitignore to
+#       make sure everything gets tracked.
 # Ignore everything...
 #*
 
