Replaced my_ns_prefix with isvte_falcon

--- a/mdapi-source/.gitignore
+++ b/mdapi-source/.gitignore
@@ -16,4 +16,4 @@
 
 # And each ????? listed below...
 # (ie. your whitelisted metadata source directories)
-# EXAMPLE: !my_ns_prefix/
+# EXAMPLE: !isvte_falcon/
