--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -338,7 +338,7 @@ jobs:
       # Store SFDX logs as artifacts
       - store_artifacts:
           path: ~/.sfdx/sfdx.log
-          destination: sfdx-logs 
+          destination: sfdx-logs
 
 ####################################################################################################
 ## WORKFLOW:  build_and_test
@@ -353,7 +353,7 @@ workflows:
           filters:
             branches:
               only:
-                - non-existant-branch   # Normally, this might be "master". This should be configured after template is customized.
+                - master
       - test-build-1:
           context: org-global
           requires:
