--- a/.forceignore
+++ b/.forceignore
@@ -24,3 +24,6 @@
 # Ignore the following directories (relative to the project root).
 sfdx-source/isvte_falcon/test/javascript
 sfdx-source/isvte_falcon/test/selenium
+
+# Ignore all .md files (like README.md)
+**.md
